--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
               <h2><strong>Featured Mars Image</strong></h2>
               <a class="featured-image" href={{mars_info.full_image_url}}>Mars Featured Image</a>
               <br>
-              <img src={{mars_info.full_image_url}} alt="Mars Feature Image">
+              <img src={{mars_info.full_image_url}} alt="Mars Feature Image" style="width:100%">
           </div>
         </div>
 
@@ -40,7 +40,7 @@
           </div>
           <br>
           <h2><strong>Mars Facts</strong></h2>
-          <table>{{mars_info.mars_table_html}}</table>
+          <table>{{mars_info.mars_data_html}}</table>
         </div> 
       </div>    
     </div>
